Build a kana picker
Much work is still needed on this - but here's a first draft of
making a kana table.

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,9 @@
       crossorigin="anonymous"
     />
 
+    <!-- Include stylesheets for pretty checkboxes -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css"/>
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
